--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@
 .title{
     position: relative;
     left: 450px;
-    top: 60px;
+    top: 30px;
     height: 70px;
     width: 450px;
     background-color: rgb(113, 113, 163);
@@ -36,8 +36,8 @@
 }
 
 .container{
-    height: 430px;
-    margin-top: 65px;
+    height: 450px;
+    margin-top: 35px;
     background-color: rgb(214, 208, 208);
     width: 450px;
     position: relative;
@@ -68,12 +68,17 @@
     color: white;
 }
 .contain{
-    height: 470px;
-    margin-top: 65px;
+    height: 480px;
+    margin-top: 35px;
     background-color: rgb(214, 208, 208);
     width: 450px;
     position: relative;
     left: 450px;
     border-radius: 13px;
 
+}
+
+.eye{
+    position: relative;
+    left: 22px;
 }
