--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@
 .title{
     position: relative;
     left: 450px;
-    top: 30px;
+    top: 10px;
     height: 70px;
     width: 450px;
     background-color: rgb(113, 113, 163);
@@ -37,7 +37,7 @@
 
 .container{
     height: 450px;
-    margin-top: 35px;
+    margin-top: 15px;
     background-color: rgb(214, 208, 208);
     width: 450px;
     position: relative;
@@ -68,8 +68,8 @@
     color: white;
 }
 .contain{
-    height: 480px;
-    margin-top: 35px;
+    height: 530px;
+    margin-top: 15px;
     background-color: rgb(214, 208, 208);
     width: 450px;
     position: relative;
@@ -80,5 +80,7 @@
 
 .eye{
     position: relative;
-    left: 22px;
+    left: 2px;
+    text-align: center;
+    justify-content: center;
 }
