--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -84,3 +84,47 @@
     text-align: center;
     justify-content: center;
 }
+
+.inp-des{
+    width:105px ;
+    padding: 4px;
+    border-radius: 5px;
+    background-color: rgb(201, 199, 191);
+}
+
+input::placeholder {
+    font-size: 14px;
+    padding: 5px;
+    font-weight: 400;
+    color: #4d3d3d; /* Set your desired placeholder text color */
+  }
+
+  .img-user{
+    border-radius: 100%;
+  }
+.search-box{
+    border-radius: 5px;
+    background-color: rgb(192, 186, 186);
+    padding: 2px 5px;
+}
+  .search{
+    margin-top: 10px;
+  }
+
+  .title-chats p{
+    font-weight: bold;
+    font-size: 26px;
+    color: rgb(88, 82, 82);
+    margin-top: -27px;
+  }
+
+  .tit-chat{
+    margin-top: -26px;
+    position: relative;
+    left: 1140px;
+  }
+
+  .line{
+    margin-top: 9px;
+    border: 3px solid rgb(75, 75, 114);
+  }
