--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -175,3 +175,38 @@ input::placeholder {
     color: rgb(54, 53, 50);
     margin-left: 9px;
   }
+
+  .chatcontainer{
+    margin-top: 23px;
+     border-radius: 10px;
+    width:280px;
+    height: 130px;
+    background-color: aliceblue;
+  }
+  .chatlist{
+   justify-content: center;
+   align-items: center;
+
+  }
+
+  .chatlist h2{
+    font-size:16px;
+    margin-left:125px;
+    position: relative;
+    top: 24px;
+    color: #474646;
+    font-family: sans-serif;
+  }
+
+  .chatlist img{
+    border-radius: 100%;
+    margin-left: 15px;
+    margin-bottom: 10px;
+  }
+
+  .chatlist p{
+    font-size: 14px;
+    position: relative;
+    left: 90px;
+    bottom: 24px;
+  }
