--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -226,3 +226,11 @@ input::placeholder {
   ::-webkit-scrollbar-thumb:hover {
     background: #555;
   }
+
+
+  /* Scrollbar css for image and the content display*/
+  .user-image{
+    border-radius: 100%;
+    height: 35px;
+    margin-left: 0px;
+  }
